  * Add missing test dependency on python3-tomlkit. Closes: #989634
  * Add fixer pkg-js-tools-test-is-missing.
  * Add fixer for pypi-homepage.
  * Add fixer for rubygems-homepage.
  * Drop checks for DEB_BUILT_OPTIONS=nocheck when upgrading to
    debhelper 13.
  * Add support for upgrading to Standards-Version 4.5.1.
  * Fix compatibility with Breezy 3.2. Closes: #989633

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 16 Apr 2021 19:04:39 +0100

lintian-brush (0.104) unstable; urgency=medium

  * Fix parsing of @if-vendor-is-not in lintian lists files. Closes:
    #986111
  * debian-watch-file-uses-old-github-pattern: Also update watch files
    that uses the 'releases' page.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 29 Mar 2021 18:56:27 +0100

lintian-brush (0.102) unstable; urgency=medium

  * Report how many changes were skipped because of lintian overrides.
    Closes: #982883
  * Various improvements to debianize.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 27 Mar 2021 20:43:53 +0000

lintian-brush (0.101) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Drop unnecesary toml dependencies.
  * Improve handling of generated debcargo fields.
  * Depend on python3-toml to run tests - it's a recommended dependency
    of upstream-ontologist.
  * Add fixer for extended-description-contains-empty-paragraph.
  * Add --allow-reformatting argument to deb-scrub-obsolete.

  [ Richard Laager ]
  * Correct section name for gbp-dch in lintian-brush.conf manapage.

  [ Jelmer Vernooĳ ]
  * Inhibit log file writing when detecting debhelper buildsystem.
    Thanks, Niels Thykier for the suggestion.
  * Don't update changelog for inaugural unreleased entry.

  [ Gordon Ball, Jelmer Vernooĳ ]
  * Add fixer debian-watch-file-uses-old-github-pattern.

  [ Jelmer Vernooĳ ]
  * Add fixer to remove obsolete maintscript entries. Closes: #959815

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 22 Mar 2021 17:57:18 +0000

lintian-brush (0.100) unstable; urgency=medium
