@@ -1,5 +1,5 @@
 ---
-Name: blah
+Name: testdir
 Bug-Database: https://github.com/OpenPrinting/cups-filters/issues
 Bug-Submit: https://github.com/OpenPrinting/cups-filters/issues/new
 Repository: https://github.com/blah/blah.git
