@@ -11,8 +11,10 @@ lintian-brush (0.105) UNRELEASED; urgency=medium
     debhelper 13.
   * Add support for upgrading to Standards-Version 4.5.1.
   * Fix compatibility with Breezy 3.2. Closes: #989633
+  * Fix compatibility with newer versions of upstream-ontologist.
+    Closes: #988909
 
- -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 16 Apr 2021 19:04:39 +0100
+ -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 13 Jun 2021 01:50:50 +0100
 
 lintian-brush (0.104) unstable; urgency=medium
 
